# hiturnips

./: Cargo.toml  README.md
src/: authentication.rs  db.rs  errors.rs  island.rs  main.rs  model.rs
static/: create_island.html  index.html  login.css  main.css
templates/: base_template.html.tera  create_edit_island.html.tera  create_island.html.tera  index.html.tera  join.html.tera  login.html.tera  see_island.html.tera  see_islands.html.tera  see_islands_base.html.tera  see_islands_base.tera  see_islands_uuid.html.tera  see_islands_uuid_host.html.tera  signup.html.tera  users_queue.html.tera
