[package]
name = "turnips"
version = "0.1.0"
authors = ["Daniela Brozzoni <danielabrozzoni@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket="^0.4"
rocket_contrib="^0.4.4"
serde={version="1.0.0", features=["derive"]}
