[package]
name = "turnips"
version = "0.1.0"
authors = ["Daniela Brozzoni <danielabrozzoni@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket="^0.4"
rocket_contrib={version="^0.4.4", features=["tera_templates"]}
serde={version="^1.0.0", features=["derive"]}
serde_json="^1.0.0"
rustc-serialize="^0.3"
redis="^0.15"
rand="^0.7.3"
rand_core="^0.5.1"
rust-argon2="^0.8"
jsonwebtoken="^5.0.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
